adding background image and fomatting font size and color

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 
 	<body>
 
-		<h1>Cauliflower Mac-N-Cheese</h1>
-
+    <div id="foodbkgd">
+      Cauliflower Mac-N-Cheese
+    </div>
+    
 <div id="ingredients">
   <h4><u>Ingredients</u></h4>
   <ul>
